frontend/test/should_pass/to_008.grg
using basic_model_002;

rule to_8 {
	a : N;

	replace{
		a;
		eval {
			a.in = (typeof(a) == NZ) ? 42 : 815;
		}
	}
}
