frontend/test/should_fail/mapset_001.grg
using mapset_model;

test mapset {
	a:A;
	
	if { 
		a.intVal in (a.intToStr.domain() & a.strToInt.domain());
	}
}

